se empezo el responsive design

--- a/index.html
+++ b/index.html
@@ -3,12 +3,49 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="stylesheet" href="css/estilos.css">
-	<title>Kleenex</title>
+	<meta name="description" content="">
+	<link type="text/css"rel="stylesheet" href="css/estilos.css">
+	<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+	<title>Inicio</title>
 </head>
 <body>
-
-		<figure><img src="img/ESQUELETO-WEB.jpg" width="4500" alt=""></figure>
-
+<header>
+		<div class="menu-bar">
+			<a href="#"class="btn-menu"><span class="icon-menu"></span>Menu</a>
+		</div>
+		<nav>
+			<ul>
+				<li><a href="index.html" class="active"><span class="icon-home3"></span>Inicio</a></li>
+				<li><a href="acerca.html"><span class="icon-file-text"></span>Comentarios</a></li>
+				<li><a href="contact.html"><span class="icon-mail"></span>Productos</a></li>
+				<li><a href="contact.html"><span class="icon-mail"></span>Diseño</a></li>
+				<li><a href="contact.html"><span class="icon-mail"></span>Contacto</a></li>
+			</ul>
+		</nav>
+	</header>
+	<div class="logo"><img src="img/logoK.jpg" alt=""></div>
+	<section class="section-top">
+		<figure>
+			<img src="img/personaliza-web.jpg" alt="">
+		</figure>
+	</section>
+	<section class="section-mid">
+		<article class="section-mid-item">
+			<figure><img src="" alt=""></figure>
+		</article>
+		<article class="section-mid-item">
+			<figure><img src="" alt=""></figure>
+		</article>
+		<article class="section-mid-item">
+			<figure><img src="" alt=""></figure>
+		</article>
+		<article class="section-mid-item">
+			<figure><img src="" alt=""></figure>
+		</article>
+		<article class="section-mid-item">
+			<figure><img src="" alt=""></figure>
+		</article>
+	</section>
 </body>
+<script src="js/menu.js"></script>
 </html>
