--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<title>Inicio</title>
 </head>
 <body>
-
 <header>
 		<div class="menu-bar">
 			<a href="#"class="btn-menu"><span class="icon-menu"></span>Menu</a>
@@ -35,8 +34,7 @@
 			<figure><img src="" alt=""></figure>
 		</article>
 		<article class="section-mid-item">
-			<figure><img src="" alt=""></figure>
-		</article>
+			<figure>+
 		<article class="section-mid-item">
 			<figure><img src="" alt=""></figure>
 		</article>
@@ -52,8 +50,4 @@
 </html>
 
 
-		<figure><img src="img/ESQUELETO-WEB.jpg" width="1500" alt=""></figure>
-
-</body>
-</html>
 
