se arreglo ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			</figure>
 		</article>
 		<article class="article-productos">
-			<figure class="article-productos-img" onClick="cambiarImagenes2()"><img src="img/identidad/Identidad-Corp-1.png" width="180" height="180" alt="">
+			<figure class="article-productos-img" onClick="cambiarImagenes2()"><img src="img/Identidad/Identidad-Corp-1.png" width="180" height="180" alt="">
 			<p>Identidad</p>
 			</figure>
 		</article>
@@ -47,7 +47,7 @@
 			</figure>
 		</article>
 		<article class="article-productos">
-			<figure class="article-productos-img" onClick="cambiarImagenes4()"><img src="img/juvenil/Juvenil-1.png" width="180" height="180" alt="">
+			<figure class="article-productos-img" onClick="cambiarImagenes4()"><img src="img/Juvenil/Juvenil-1.png" width="180" height="180" alt="">
 			<p>Juvenil</p>
 			</figure>
 		</article>
