Se agregaron iconos en la categoria de los productos

--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
 
 	<section class="section-bot">
 		<article class="article-productos">
-			<figure class="article-productos-img" onClick="cambiarImagenes('img/convencional/Convencional-1.png')"><img src="img/convencional/Convencional-1.png" width="180" height="180" alt="">
+			<figure class="article-productos-img" onClick="cambiarImagenes()"><img src="img/iconos/Convencional.jpg" width="180" height="180" alt="">
 			<p>Convencional</p>
 			</figure>
 		</article>
 		<article class="article-productos">
-			<figure class="article-productos-img" onClick="cambiarImagenes2()"><img src="img/Identidad/Identidad-Corp-1.png" width="180" height="180" alt="">
+			<figure class="article-productos-img" onClick="cambiarImagenes2()"><img src="img/iconos/Identidad-Corporativa.jpg" width="180" height="180" alt="">
 			<p>Identidad</p>
 			</figure>
 		</article>
 		<article class="article-productos">
-			<figure class="article-productos-img" onClick="cambiarImagenes3()"><img src="img/Infantil/Infantil-1.png" width="180" height="180" alt="">
+			<figure class="article-productos-img" onClick="cambiarImagenes3()"><img src="img/iconos/Infantil.jpg" width="180" height="180" alt="">
 			<p>Infantil</p>
 			</figure>
 		</article>
 		<article class="article-productos">
-			<figure class="article-productos-img" onClick="cambiarImagenes4()"><img src="img/Juvenil/Juvenil-1.png" width="180" height="180" alt="">
+			<figure class="article-productos-img" onClick="cambiarImagenes4()"><img src="img/iconos/Juvenil.jpg" width="180" height="180" alt="">
 			<p>Juvenil</p>
 			</figure>
 		</article>
 		<article class="article-productos">
-			<figure class="article-productos-img" onClick="cambiarImagenes5()"><img src="img/Licencia/Licencia-1.png" width="180" height="180" alt="">
+			<figure class="article-productos-img" onClick="cambiarImagenes5()"><img src="img/iconos/Licencias.jpg" width="180" height="180" alt="">
 			<p>Licencia</p>
 			</figure>
 		</article>
@@ -74,6 +74,8 @@
 						<figure id="img1">
 						</figure>
 						<figure id="img2">
+						</figure>
+						<figure id="img3">
 						</figure>
 						<figure id="img3">
 						</figure>
