--- a/index.html
+++ b/index.html
@@ -34,35 +34,35 @@
 
 	<section class="section-bot">
 		<article class="article-productos">
-			<a href="#modal-one">
+			<a href="#producto-uno">
 			<figure class="article-productos-img"><img src="img/iconos/Convencional.jpg" width="180" height="180" alt="">
 			<p>Convencional</p>
 			</figure>
 			</a>
 		</article>
 		<article class="article-productos">
-			<a href="#modal-two">
+			<a href="#producto-dos">
 			<figure class="article-productos-img"><img src="img/iconos/Identidad-Corporativa.jpg" width="180" height="180" alt="">
 			<p>Identidad</p>
 			</figure>
 			</a>
 		</article>
 		<article class="article-productos">
-			<a href="#modal-three">
+			<a href="#producto-tres">
 			<figure class="article-productos-img"><img src="img/iconos/Infantil.jpg" width="180" height="180" alt="">
 			<p>Infantil</p>
 			</figure>
 			</a>
 		</article>
 		<article class="article-productos">
-			<a href="#modal-four">
+			<a href="#producto-cuatro">
 			<figure class="article-productos-img"><img src="img/iconos/Juvenil.jpg" width="180" height="180" alt="">
 			<p>Juvenil</p>
 			</figure>
 			</a>
 		</article>
 		<article class="article-productos">
-			<a href="#modal-fifth">
+			<a href="#producto-cinco">
 			<figure class="article-productos-img"><img src="img/iconos/Licencias.jpg" width="180" height="180" alt="">
 			<p>Licencia</p>
 			</figure>
@@ -71,7 +71,7 @@
 	</section>
 	<section class="section-bot-img">
 
-			<a href="#" class="modal" id="modal-one" aria-hidden="true">
+			<a href="#" class="modal" id="producto-uno" aria-hidden="true">
 	  		</a>
 			  <div class="modal-dialog">
 			    <div class="modal-header">
@@ -88,7 +88,7 @@
 			    </div>
 			  </div>
 
-			  <a href="#" class="modal" id="modal-two" aria-hidden="true">
+			  <a href="#" class="modal" id="producto-dos" aria-hidden="true">
 	  		</a>
 			  <div class="modal-dialog">
 			    <div class="modal-header">
@@ -105,7 +105,7 @@
 			    </div>
 			  </div>
 
-			    <a href="#" class="modal" id="modal-three" aria-hidden="true">
+			    <a href="#" class="modal" id="producto-tres" aria-hidden="true">
 	  		</a>
 			  <div class="modal-dialog">
 			    <div class="modal-header">
@@ -122,7 +122,7 @@
 			  </div>
 				
 
-					<a href="#" class="modal" id="modal-four" aria-hidden="true">
+					<a href="#" class="modal" id="producto-cuatro" aria-hidden="true">
 	  		</a>
 			  <div class="modal-dialog">
 			    <div class="modal-header">
@@ -139,7 +139,7 @@
 			  </div>
 						
 
-						<a href="#" class="modal" id="modal-fifth" aria-hidden="true">
+						<a href="#" class="modal" id="producto-cinco" aria-hidden="true">
 	  		</a>
 			  <div class="modal-dialog">
 			    <div class="modal-header">
